# ip2socks

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Gemfile  README.md  Rakefile  Vagrantfile
cmake/: config.h.cmake  libduktape.cmake  libev.cmake  libev_config.h.cmake  liblua.cmake  liblwip.cmake  librdns.cmake  libuv.cmake  libyaml.cmake  lwip.cmake  yaml_config.h.cmake
cmake_module/: FindReadline.cmake
examples/socks5/: Makefile
libev/: config.h.cmake
port/: perf.c  sys_arch.c
port/include/arch/: cc.h  perf.h  sys_arch.h
port/include/netif/: delif.h  fifo.h  list.h  sio.h  socket_util.h  tapif.h  tcpdump.h  tunif.h  unixif.h
port/netif/: delif.c  fifo.c  list.c  pcapif.c  sio.c  socket_util.c  tapif.c  tcpdump.c  tunif.c  unixif.c
scripts/: block.conf  config.example.yml  config.linux.example.yml  custom_china_ip_list.txt  custom_domain_server.conf  darwin_down_utun.sh  darwin_setup_utun.sh  down_tap.sh  init.lua  linux_down_tuntap.sh  linux_setup_tuntap.sh  route  setup_tap.sh  setup_tun.sh
src/: dns.rb  loop.rb  lwipopts.h  main.c  main.cpp  socks5.c  socks5.cpp  socks5.h  struct.cpp  struct.h  sum.lua  tcp_raw.c  tcp_raw.cpp  tcp_raw.h  tcpecho_raw.c  udp_raw.c  udp_raw.cpp  udp_raw.h  udpecho_raw.c  util.cpp  util.h  var.cpp  var.h
src/dns/: dns_parser.c  dns_parser.h  dnscap_common.h  dump_dns.c  dump_dns.h
src/duktape_socket/: socket.c  socket.h  timer.c  usocket.c  usocket.h
src/mruby_ev/: mrev.c  mrev.h  mrev.rb
src/netif/: socket_util.c  socket_util.h  tapif.c  tunif.c
src/ruby/: app.rb  dns.rb  dns_client.rb  dns_server.rb  http_client.rb  http_proxy.rb  init.rb  ip.rb  ip_pool.rb  rb_ev_io.c  rb_ev_io.h  rbev.c  rbev.h  selector.rb  test_dns.rb
src/ruby/dns/: adler32.rb  dns_table.rb  ip_pool.rb  message.rb  replace.rb  system.rb
src/ruby/dns/extensions/: resolv.rb
